@@ -1,3 +1,11 @@
+2007-02-10  Neil Jagdish Patel  <njp@Fedora>
+
+	Some dual screen support. swapped auto detection with user specified dectection.
+
+	* src/awn-bar.c: (_position_window):
+	* src/awn-gconf.c: (awn_gconf_new), (load_monitor):
+	* src/awn-gconf.h:
+
 2007-02-09  Neil Jagdish Patel  <njp@Fedora>
 
 	Added new hover effect for review.
